src/test/ui/error-codes/E0044.stderr
error[E0044]: foreign items may not have type parameters
  --> $DIR/E0044.rs:12:5
   |
LL |     fn sqrt<T>(f: T) -> T;
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: use specialization instead of type parameters by replacing them with concrete types like `u32`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0044"
